fix: change to 1fr column at product grid on mobile version

--- a/tech-shop/css/style.css
+++ b/tech-shop/css/style.css
@@ -10,15 +10,6 @@
   padding: 0;
 }
 
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-
 button,
 input,
 select,
@@ -309,7 +300,7 @@ h3 {
 }
 
 h1 {
-  font-size: var(--font-size-2xl);
+  font-size: var(--font-size-xl);
   font-weight: var(--font-weight-bold);
   text-align: center;
   margin: var(--space-2);
@@ -355,8 +346,8 @@ a:hover {
 
 .cart-count {
   position: absolute;
-  top: 7px;
-  right: 4px;
+  top: 9px;
+  right: 10px;
   background: var(--color-badge-out);
   color: white;
   font-size: 12px;
@@ -392,7 +383,7 @@ a:hover {
 .catalog-grid {
   margin: var(--space-4) 0;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap: var(--space-3);
   justify-content: space-between;
 }
@@ -421,12 +412,12 @@ a:hover {
 .product-card img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 /*  PRODUCT TEXT*/
 .price {
   margin: 0 var(--space-2);
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-xl);
   font-weight: var(--font-weight-bold);
 }
 p span {
@@ -495,7 +486,7 @@ p span {
   font-size: var(--font-size-sm);
   font-weight: var(--font-weight-semibold);
   border-bottom: 1px solid var(--color-border);
-  padding: var(--space-3) var(--space-4);
+  padding: var(--space-2) var(--space-1);
   text-align: left;
 }
 
